working version with modified songs API port
