# Song API/api/swagger.json
@@ -14,22 +14,31 @@
     },
     "basePath": "/",
     "paths": {
-        "/collections": {
-            "get": {
-                "description": "Get collections.",
+        "/collections/songs/{id}": {
+            "delete": {
+                "description": "Delete an existing song from the collection.",
                 "tags": [
-                    "collections"
+                    "songs"
                 ],
-                "summary": "Get collections.",
+                "summary": "Delete an existing song from the collection.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Song ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Collection"
-                            }
-                        }
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Song not found"
                     },
                     "500": {
                         "description": "Something went wrong"
@@ -39,15 +48,15 @@
         },
         "/collections/{id}": {
             "get": {
-                "description": "Get a collection.",
+                "description": "Get a song.",
                 "tags": [
-                    "collections"
+                    "Songs"
                 ],
-                "summary": "Get a collection.",
+                "summary": "Get a song.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Collection UUID formatted ID",
+                        "description": "Song UUID formatted ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -57,7 +66,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Collection"
+                            "$ref": "#/definitions/models.Song"
                         }
                     },
                     "422": {
@@ -71,13 +80,16 @@
         }
     },
     "definitions": {
-        "models.Collection": {
+        "models.Song": {
             "type": "object",
             "properties": {
-                "content": {
+                "artist": {
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
