# Song API/internal/controllers/collections/get_Songs.go
@@ -10,12 +10,12 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
-// GetCollection
-// @Tags         collections
+// GetSong
+// @Tags         Songs
 // @Summary      Get a song.
 // @Description  Get a song.
 // @Param        id           	path      string  true  "Song UUID formatted ID"
-// @Success      200            {object}  models.Collection
+// @Success      200            {object}  models.Song
 // @Failure      422            "Cannot parse id"
 // @Failure      500            "Something went wrong"
 // @Router       /collections/{id} [get]
